--- a/public/index.html
+++ b/public/index.html
@@ -181,12 +181,14 @@
         })
 
         socket.on("keys", (data) => {
+            const mapToChip8Keypad = [13, 0, 1, 2, 4, 5, 6, 8, 9, 10, 12, 14, 3, 7, 11, 15]; 
             const hexNumbers = document.querySelectorAll("#hex-number");
             for (let i = 0; i < data.length; i++) {
+                let mapped = mapToChip8Keypad[i];
                 if (data[i]) {
-                    hexNumbers[i].classList.add("pressed");
+                    hexNumbers[mapped].classList.add("pressed");
                 } else {
-                    hexNumbers[i].classList.remove("pressed");
+                    hexNumbers[mapped].classList.remove("pressed");
                 }
             }
         })
